# docfliq-chatbot

./: .gitignore  CLAUDE.md  checkpoints.db-shm  checkpoints.db-wal  main.py  pyproject.toml  requirements.txt
backend/: chain.py
backend/chains/: __init__.py  chat_chain.py
backend/config/: __init__.py  prompts_chatbot.py  prompts_ingestion.py
backend/langgraph_workflow/: chat_mode_graphs.py  graph.py  nodes.py  state.py
backend/utils/: __init__.py  dynamodb_helper.py
common_assets/: config.py
frontend/: app.py  helper.py
frontend/components/: __init__.py  chat_history.py  chat_input.py  chat_interface.py  chat_list_sidebar.py  mode_selector.py
